[build-system]
requires = [
    "setuptools==68.2.2",
    "setuptools-rust",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "flyer-env"
version = "0.1"

# [[tool.setuptools-rust.ext-modules]]
# # Build rust extension for FlyerEnv
# target = "pyflyer.pyflyer"
# path = "pyflyer-rs/Cargo.toml"
# binding = "PyO3"

[tool.maturin]
python-source = "python"
module-name = "pyflyer-rs.pyflyer"