[metadata]
name=flyer-env
version=0.1
author=Alexander Quessy
author_email=aq15777@bristol.ac.uk
description=An environment for simulated fixed wing aircraft guidance, navigation and control tasks
long_description=file:README.md
long_description_content_type=text/markdown
url=https://github.com/aos55/flyer-env
license=MIT

[options]
setup_requires=
    pytest-runner
install_requires=
    gymnasium>=0.28
    numpy
    pygame>=2.0.2
    matplotlib
    pandas
    scipy
    simple-pid
    pyYAML
    scikit-image
    opensimplex

packages=find:
include_package_data = True
test_require=
    pytest

[options.extras_require]
deploy = pytest-runner; sphinx<1.7.3; sphinx_rtd_theme

[options.packages.find]
exclude=
    tests
    docs
    scripts

[options.entry_points]
gymnasium.envs =
    __root__ = flyer_env.__init__:register_flyer_envs

[aliases]
test=pytest